Adapt test coding to Java 17